# kak-tree-sitter

./: .build.yml  CHANGELOG.md  CHANGELOG.old.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  rustfmt.toml
docs/design/: request.md
docs/man/: configuration.md  features.md  highlighting.md  ktsctl.md  tweaking.md
kak-tree-sitter/: CHANGELOG.md  Cargo.toml
kak-tree-sitter-config/: CHANGELOG.md  Cargo.toml  default-config.toml
kak-tree-sitter-config/src/: error.rs  lib.rs  source.rs
kak-tree-sitter/rc/: static.kak
kak-tree-sitter/src/: cli.rs  client.rs  error.rs  kakoune.rs  main.rs  server.rs
kak-tree-sitter/src/kakoune/: face.rs  rc.rs  selection.rs  session.rs  socket.rs
kak-tree-sitter/src/protocol/: request.rs  response.rs
kak-tree-sitter/src/server/: fifo.rs  handler.rs  io.rs  resources.rs  triple_buffer.rs
kak-tree-sitter/src/tree_sitter/: highlighting.rs  languages.rs  state.rs
ktsctl/: CHANGELOG.md  Cargo.toml
ktsctl/src/: cli.rs  error.rs  git.rs  main.rs  process.rs  resources.rs  ui.rs
ktsctl/src/commands/: manage.rs  query.rs  remove.rs
ktsctl/src/ui/: report.rs  section.rs
runtime/queries/astro/: highlights.scm  injections.scm
runtime/queries/cpp/: highlights.scm  indents.scm  textobjects.scm
runtime/queries/glsl/: highlights.scm  indents.scm  injections.scm  textobjects.scm
runtime/queries/javascript/: highlights.scm  indents.scm  tags.scm  textobjects.scm
runtime/queries/jsonc/: README.md  highlights.scm  indents.scm
runtime/queries/jsx/: highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm  textobjects.scm
runtime/queries/markdown/: highlights.scm
runtime/queries/tsx/: highlights.scm
runtime/queries/typescript/: highlights.scm
