[workspace]
resolver = "2"

members = [
	"kak-tree-sitter",
	"kak-tree-sitter-config",
	"ktsctl",
]

[workspace.package]
authors = ["Dimitri Sabadie <hadronized@strongly-typed-thoughts.net>"]
edition = "2024"
homepage = "https://sr.ht/~hadronized/kak-tree-sitter/"
keywords = ["tree-sitter", "kakoune"]
readme = "README.md"
rust-version = "1.86.0"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
kak-tree-sitter-config = { version = ">=3.0, < 5.0", path = "kak-tree-sitter-config" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
simple_logger = "5"
thiserror = "2.0.3"
