[package]
name = "kak-tree-sitter-config"
version = "3.0.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <hadronized@strongly-typed-thoughts.net>"]
description = "Server between Kakoune and tree-sitter; configuration layer"
keywords = ["tree-sitter", "kakoune"]
categories = ["text-editors"]
homepage = "https://sr.ht/~hadronized/kak-tree-sitter"
repository = "https://sr.ht/~hadronized/kak-tree-sitter"
readme = "README.md"
edition = "2024"
rust-version = "1.86.0"

[dependencies]
dirs = "6.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.3"
toml = "0.8.12"
