[package]
name = "kak-tree-sitter-config"
version = "4.1.1"
license = "BSD-3-Clause"
description = "Server between Kakoune and tree-sitter; configuration layer"
categories = ["text-editors"]
repository = "https://sr.ht/~hadronized/kak-tree-sitter"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
dirs.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true

toml = ">=0.8.12, < 0.10"
