[package]
name = "kak-tree-sitter"
version = "3.1.1"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <hadronized@strongly-typed-thoughts.net>"]
description = "Server between Kakoune and tree-sitter"
keywords = ["tree-sitter", "kakoune"]
categories = ["text-editors"]
homepage = "https://sr.ht/~hadronized/kak-tree-sitter/"
repository = "https://sr.ht/~hadronized/kak-tree-sitter/"
readme = "../README.md"
edition = "2024"
rust-version = "1.86.0"

[features]
debug-hl-ranges = []
# send replies to Kakoune by writing to the Unix socket directly
direct-unix-socket = []

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
daemonize = "0.5"
dirs = "6.0"
kak-tree-sitter-config = { version = ">=3.0, < 5.0", path = "../kak-tree-sitter-config" }
libc = "0.2"
libloading = "0.8"
log = "0.4"
mio = { version = "1.0.2", features = ["net", "os-poll", "os-ext"] }
ropey = "1.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "5"
thiserror = "2.0.3"
tree-house = "0.3.0"
tree-house-bindings = { version = "0.2.1", features = ["ropey", "tree-sitter-language"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
tree-sitter-rust = "0.24"
