[package]
name = "kak-tree-sitter"
version = "3.1.1"
license = "BSD-3-Clause"
description = "Server between Kakoune and tree-sitter"
repository = "https://sr.ht/~hadronized/kak-tree-sitter/"
categories = ["text-editors"]

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true

[features]
debug-hl-ranges = []
# send replies to Kakoune by writing to the Unix socket directly
direct-unix-socket = []

[dependencies]
clap.workspace = true
dirs.workspace = true
kak-tree-sitter-config.workspace = true
log.workspace = true
serde.workspace = true
simple_logger.workspace = true
thiserror.workspace = true

chrono = "0.4"
ctrlc = "3.4"
daemonize = "0.5"
libc = "0.2"
libloading = ">=0.8, < 0.10"
mio = { version = "1.0.2", features = ["net", "os-poll", "os-ext"] }
ropey = "1.6.1"
serde_json = "1.0"
tree-house = "0.3.0"
tree-house-bindings = { version = "0.2.1", features = ["ropey", "tree-sitter-language"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
tree-sitter-rust = "0.24"
