[package]
name = "ktsctl"
version = "3.0.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <hadronized@strongly-typed-thoughts.net>"]
description = "CLI controler of kak-tree-sitter"
keywords = ["tree-sitter", "kakoune"]
categories = ["text-editors"]
homepage = "https://sr.ht/~hadronized/kak-tree-sitter"
repository = "https://sr.ht/~hadronized/kak-tree-sitter"
readme = "README.md"
edition = "2024"
rust-version = "1.86.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
dirs = "6.0"
kak-tree-sitter-config = { version = ">=3.0, < 5.0", path = "../kak-tree-sitter-config" }
log = "0.4"
simple_logger = "5"
thiserror = "2.0.3"
unicode-segmentation = "1.11"
