[package]
name = "ktsctl"
version = "3.1.1"
license = "BSD-3-Clause"
description = "CLI controler of kak-tree-sitter"
categories = ["text-editors"]
repository = "https://sr.ht/~hadronized/kak-tree-sitter"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true

[features]
trace = []

[dependencies]
clap.workspace = true
dirs.workspace = true
kak-tree-sitter-config.workspace = true
log.workspace = true
simple_logger.workspace = true
thiserror.workspace = true

colored = "3.0"
unicode-segmentation = "1.11"
